Update README and configuration files for improved setup and aesthetics
- Enhanced README with detailed structure and setup instructions, including new package management scripts.
- Modified btop configuration to disable network sync.
- Updated fcitx5 settings to disable preedit by default.
- Changed color themes in fuzzel and ghostty configurations for better visual consistency.
- Adjusted GTK theme colors for improved aesthetics across light and dark modes.
- Refined Hyprland color settings and added custom shader support in ghostty.
- Improved error handling in OverviewWidget.qml for better workspace management.

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -32,7 +32,7 @@
 # theme = Darkmatrix
 # theme = Matrix
 config-file = colors
-
+custom-shader = shaders/cursor_tail.glsl
 # # Spacing around the equals sign does not matter.
 # # All of these are identical:
 # key=value
