--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -122,10 +122,10 @@ general {
     layout = dwindle
     # layout = master
 
-    # FM‑5 : Cipher Collapse (deep teal → ghost white → fracture cyan)
-    col.active_border   = rgba(041e21ee) rgba(00ffbbee) rgba(e0fffcee) rgba(041e21ee) 150deg
-    col.inactive_border = rgba(041e2188) rgba(00ffbb44) rgba(e0fffc44) rgba(041e2188) 150deg
-
+    # FM‑6 : Neon Override (matrix green → override violet)
+    col.active_border   = rgba(001a12ee) rgba(00ff66ee) rgba(9f30ffee) rgba(001a12ee) 30deg
+    col.inactive_border = rgba(001a1288) rgba(00ff6644) rgba(9f30ff44) rgba(001a1288) 30deg
+    
     # Gaps and border
     gaps_in = 3
     gaps_out = 3
@@ -237,7 +237,7 @@ animations {
 
     
     # Workspace animations
-    animation = workspaces, 1, 3, easeOutQuart, slidefade 70%
+    animation = workspaces, 1, 3, easeOutQuart, slidefadevert 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
     animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
