--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(7f949fAA)
-#     col.inactive_border = rgba(364954AA)
+#     col.active_border = rgba(859393AA)
+#     col.inactive_border = rgba(3c4949AA)
 # }
 
 misc {
-    background_color = rgba(0a151aFF)
+    background_color = rgba(091615FF)
 }
 
 plugin {
@@ -17,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0a151aFF)
-        col.text = rgba(d9e4ebFF)
+        bar_color = rgba(091615FF)
+        col.text = rgba(d7e5e4FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(d9e4eb), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(d9e4eb), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(d9e4eb), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(d7e5e4), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(d7e5e4), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(d7e5e4), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(59dbc1AA) rgba(59dbc177),pinned:1
+windowrulev2 = bordercolor rgba(00dddbAA) rgba(00dddb77),pinned:1
