Update fcitx5 config to enable preedit by default, modify Hyprland color settings, refresh monitors config timestamp, and enhance BarContent.qml layout for better visibility of clock and utility buttons

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -122,9 +122,9 @@ general {
     layout = dwindle
     # layout = master
 
-    # FM‑6 : Neon Override (matrix green → override violet)
-    col.active_border   = rgba(001a12ee) rgba(00ff66ee) rgba(9f30ffee) rgba(001a12ee) 30deg
-    col.inactive_border = rgba(001a1288) rgba(00ff6644) rgba(9f30ff44) rgba(001a1288) 30deg
+    # NF‑2 : Neon Abyss
+    col.active_border   = rgba(05080cee) rgba(00ffbbee) rgba(008888ee) rgba(05080cee) 45deg
+    col.inactive_border = rgba(05080c88) rgba(00ffbb44) rgba(00888844) rgba(05080c88) 45deg
 
     # Gaps and border
     gaps_in = 3
