Enhance media playback responsiveness by adjusting position update intervals in Media.qml, PlayerControl.qml, and VerticalMedia.qml; fix typo in keybinds.conf

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -223,7 +223,7 @@ bind = Ctrl+Super+Alt, code:18, movetoworkspacesilent, 19 # Move window to works
 bind = Ctrl+Super+Alt, code:19, movetoworkspacesilent, 20 # Move window to workspace 20
 
 ### Overview & Paging
-# bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
+bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
 bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
 bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
