Add window resize keybindings for improved window management

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -121,6 +121,12 @@ bind = Alt, F4, killactive, # [hidden] Close (Windows)
 bind = Super, Q, killactive, # Close
 bind = Super+Shift+Alt, Q, exec, hyprctl kill # Forcefully zap a window
 
+### Window Resize
+binde = Super+Alt, right, resizeactive, 20 0  # Grow width
+binde = Super+Alt, left, resizeactive, -20 0 # Shrink width
+binde = Super+Alt, up, resizeactive, 0 -20   # Shrink height
+binde = Super+Alt, down, resizeactive, 0 20  # Grow height
+
 ### Split Ratio / Modes / Pinning
 #/# binde = Super, ;/',, # Adjust split ratio
 binde = Super, Semicolon, splitratio, -0.1 # [hidden]
@@ -223,7 +229,7 @@ bind = Ctrl+Super+Alt, code:18, movetoworkspacesilent, 19 # Move window to works
 bind = Ctrl+Super+Alt, code:19, movetoworkspacesilent, 20 # Move window to workspace 20
 
 ### Overview & Paging
-bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
+# bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
 bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
 bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
