Adjust padding in NotificationGroup.qml for better spacing and increase max height to prevent text clipping Add 4-finger pinch gesture to toggle fullscreen in general.conf

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -17,6 +17,9 @@ gesture = 4, right, dispatcher, layoutmsg, move -col
 
 # 4-finger vertical: workspaces
 gesture = 4, vertical, workspace
+
+# 4-finger pinch: toggle fullscreen
+gesture = 4, pinch, fullscreen
 gestures {
     workspace_swipe_distance = 700
     workspace_swipe_cancel_ratio = 0.2
