--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -36,9 +36,11 @@ bindd = Super, Period, Emoji >> clipboard, global, quickshell:overviewEmojiToggl
 ### Sidebars & Panels
 bind = Super, A, global, quickshell:sidebarLeftToggle # Toggle left sidebar
 bind = Super+Alt, A, global, quickshell:sidebarLeftToggleDetach # [hidden]
+bind = Super+Ctrl, A, global, quickshell:sidebarLeftTogglePin # Pin/unpin left sidebar
 bind = Super, B, global, quickshell:sidebarLeftToggle # [hidden]
 bind = Super, O, global, quickshell:sidebarLeftToggle # [hidden]
 bindd = Super, N, Toggle right sidebar, global, quickshell:sidebarRightToggle # Toggle right sidebar
+bindd = Super+Ctrl, N, Pin/unpin right sidebar, global, quickshell:sidebarRightTogglePin # Pin/unpin right sidebar
 bindd = Super, Slash, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
 bindd = Super, K, Toggle on-screen keyboard, global, quickshell:oskToggle # Toggle on-screen keyboard
 bind = Super, G, global, quickshell:overlayToggle # Toggle overlay
