--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -122,8 +122,8 @@ gestures {
 
 general {
     # layout = scrolling
-    layout = dwindle
-    # layout = master
+    # layout = dwindle
+    layout = master
 
     # NF‑2 : Neon Abyss
     col.active_border   = rgba(05080cee) rgba(00ffbbee) rgba(008888ee) rgba(05080cee) 45deg
@@ -132,7 +132,7 @@ general {
     # Gaps and border
     gaps_in = 3
     gaps_out = 3
-    gaps_workspaces = 50
+    gaps_workspaces = 20
 
     border_size = 2
     resize_on_border = true
@@ -157,10 +157,10 @@ dwindle {
 }
 
 decoration {
-    rounding = 15
+    rounding = 8
 
     blur {
-        enabled = true
+        enabled = false
         xray = false
         special = false
         new_optimizations = true
@@ -217,8 +217,8 @@ animations {
     # animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
     # animation = windowsMove, 1, 3, emphasizedDecel, slide
     # animation = border, 1, 10, emphasizedDecel
-    animation = windowsIn, 1, 3, easeOutQuart, slide
-    animation = windowsOut, 1, 3, easeOutQuart, slide
+    animation = windowsIn, 1, 1, standardDecel, slide
+    animation = windowsOut, 1, 1, standardDecel, slide
     animation = windowsMove, 1, 3, easeInOutSine
 
     # Layer animations
@@ -240,7 +240,7 @@ animations {
 
     
     # Workspace animations
-    animation = workspaces, 1, 3, easeOutQuart, slidefadevert 70%
+    animation = workspaces, 1, 1, standardDecel, slidefadevert 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
     animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
