--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -3,6 +3,12 @@
 # Uncomment to apply global transparency to all windows:
 # windowrulev2 = opacity 0.89 override 0.89 override, class:.*
 
+# App → workspace assignments
+windowrulev2 = workspace 1 silent, class:^(cursor)$
+windowrulev2 = workspace 2 silent, class:^(code|Code|VSCodium)$
+windowrulev2 = workspace 3 silent, class:^(zen-browser)$
+windowrulev2 = workspace 4 silent, class:^(?i)tradingview.*$
+
 # Disable blur for xwayland context menus
 windowrulev2 = noblur,class:^()$,title:^()$
 # windowrulev2 = noblur, xwayland:1
