Refactor color configurations across multiple files for consistency and improved aesthetics

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -4,9 +4,9 @@
 # windowrulev2 = opacity 0.89 override 0.89 override, class:.*
 
 # App → workspace assignments
-windowrulev2 = workspace 1 silent, class:^(cursor)$
+windowrulev2 = workspace 1 silent, class:^(zen-browser|zen)$
+windowrulev2 = workspace 3 silent, class:^(cursor)$
 windowrulev2 = workspace 2 silent, class:^(code|Code|VSCodium)$
-windowrulev2 = workspace 3 silent, class:^(zen-browser)$
 windowrulev2 = workspace 4 silent, class:^(?i)tradingview.*$
 
 # Disable blur for xwayland context menus
