--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -217,8 +217,8 @@ animations {
     # animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
     # animation = windowsMove, 1, 3, emphasizedDecel, slide
     # animation = border, 1, 10, emphasizedDecel
-    animation = windowsIn, 1, 1, standardDecel, slide
-    animation = windowsOut, 1, 1, standardDecel, slide
+    animation = windowsIn, 1, 2, standardDecel, slide
+    animation = windowsOut, 1, 2, standardDecel, slide
     animation = windowsMove, 1, 3, easeInOutSine
 
     # Layer animations
@@ -232,7 +232,7 @@ animations {
     # Fade animations
     # animation = fadeLayersIn, 1, 0.5, menu_decel
     # animation = fadeLayersOut, 1, 2.7, menu_accel
-    animation = fadeIn, 1, 4, easeInOutSine
+    animation = fadeIn, 1, 3, easeInOutSine
     animation = fadeOut, 1, 3, easeInOutSine
     animation = fadeSwitch, 1, 3, easeInOutSine
     animation = fadeShadow, 1, 3, easeInOutSine
@@ -240,11 +240,11 @@ animations {
 
     
     # Workspace animations
-    animation = workspaces, 1, 1, standardDecel, slidefadevert 70%
+    animation = workspaces, 1, 2, standardDecel, slidefadevert 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
-    animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
-    animation = specialWorkspaceOut, 1, 1.2, emphasizedAccel, slidevert
+    animation = specialWorkspaceIn, 1, 1.5, emphasizedDecel, slidefadevert
+    animation = specialWorkspaceOut, 1, 1.5, emphasizedAccel, slidefadevert
 }
 
 input {
