--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -125,9 +125,9 @@ general {
     # layout = dwindle
     layout = master
 
-    # NF‑2 : Neon Abyss
-    col.active_border   = rgba(05080cee) rgba(00ffbbee) rgba(008888ee) rgba(05080cee) 45deg
-    col.inactive_border = rgba(05080c88) rgba(00ffbb44) rgba(00888844) rgba(05080c88) 45deg
+    # FM‑2 : Kernel Panic Flux (matrix green → anomaly magenta)
+    col.active_border   = rgba(001910ee) rgba(00ff55ee) rgba(ff00ffee) rgba(001910ee) 60deg
+    col.inactive_border = rgba(00191088) rgba(00ff5544) rgba(ff00ff44) rgba(00191088) 60deg
 
     # Gaps and border
     gaps_in = 3
@@ -209,8 +209,8 @@ animations {
     bezier = neonPulse, 0.15, 0.85, 0.1, 1.0
 
     # Border animations
-    animation = border, 1, 1, neonPulse
-    animation = borderangle, 1, 30, neonPulse, loop
+    # animation = border, 1, 1, neonPulse
+    # animation = borderangle, 1, 30, neonPulse, loop
     
     # Window animations
     # animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
