Update color configurations across multiple files for improved aesthetics and consistency

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -125,9 +125,9 @@ general {
     # layout = dwindle
     layout = master
 
-    # FM‑2 : Kernel Panic Flux (matrix green → anomaly magenta)
-    col.active_border   = rgba(001910ee) rgba(00ff55ee) rgba(ff00ffee) rgba(001910ee) 60deg
-    col.inactive_border = rgba(00191088) rgba(00ff5544) rgba(ff00ff44) rgba(00191088) 60deg
+    # FM‑7 : Packet Storm (electric cyan → hazard yellow)
+    col.active_border   = rgba(00141aee) rgba(00ffddee) rgba(faff00ee) rgba(00141aee) 75deg
+    col.inactive_border = rgba(00141a88) rgba(00ffdd44) rgba(faff0044) rgba(00141a88) 75deg
 
     # Gaps and border
     gaps_in = 3
