Update color configurations for improved aesthetics and consistency across multiple files

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -8,6 +8,7 @@ windowrulev2 = workspace 1 silent, class:^(zen-browser|zen)$
 windowrulev2 = workspace 3 silent, class:^(cursor)$
 windowrulev2 = workspace 2 silent, class:^(code|Code|VSCodium)$
 windowrulev2 = workspace 4 silent, class:^(?i)tradingview.*$
+windowrulev2 = workspace 5 silent, class:^(?i)spotify.*$
 
 # Disable blur for xwayland context menus
 windowrulev2 = noblur,class:^()$,title:^()$
