--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(86948dAA)
-#     col.inactive_border = rgba(3d4944AA)
+#     col.active_border = rgba(8392a3AA)
+#     col.inactive_border = rgba(394857AA)
 # }
 
 misc {
-    background_color = rgba(0a1611FF)
+    background_color = rgba(0c141bFF)
 }
 
 plugin {
@@ -17,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0a1611FF)
-        col.text = rgba(d8e6deFF)
+        bar_color = rgba(0c141bFF)
+        col.text = rgba(dbe3edFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(d8e6de), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(d8e6de), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(d8e6de), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(dbe3ed), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(dbe3ed), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(dbe3ed), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(00e0b2AA) rgba(00e0b277),pinned:1
+windowrulev2 = bordercolor rgba(4ddad8AA) rgba(4ddad877),pinned:1
