Refactor color configurations and update GTK themes for improved aesthetics and consistency across multiple files

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(8392a3AA)
-#     col.inactive_border = rgba(394857AA)
+#     col.active_border = rgba(a28b8fAA)
+#     col.inactive_border = rgba(544245AA)
 # }
 
 misc {
-    background_color = rgba(0c141bFF)
+    background_color = rgba(1d1013FF)
 }
 
 plugin {
@@ -17,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0c141bFF)
-        col.text = rgba(dbe3edFF)
+        bar_color = rgba(1d1013FF)
+        col.text = rgba(f6dce0FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(dbe3ed), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(dbe3ed), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(dbe3ed), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(f6dce0), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(f6dce0), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(f6dce0), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(4ddad8AA) rgba(4ddad877),pinned:1
+windowrulev2 = bordercolor rgba(ffb1c2AA) rgba(ffb1c277),pinned:1
