--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -55,6 +55,7 @@ bindle=, XF86MonBrightnessDown, exec, qs -c $qsConfig ipc call brightness decrem
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ -l 1.5 && ~/.config/hypr/hyprland/scripts/play_sound.sh audio-volume-change # [hidden]
 bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%- && ~/.config/hypr/hyprland/scripts/play_sound.sh audio-volume-change # [hidden]
 bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
+bindd = Super+Alt, K, Toggle keyboard sounds, exec, ~/.config/hypr/hyprland/scripts/toggle_wayvibes.sh # Toggle keyboard sounds (wayvibes)
 bindld = Super+Shift,M, Toggle mute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
 bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
 bindl = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
