--- a/config/hypr/hyprland/execs.conf
+++ b/config/hypr/hyprland/execs.conf
@@ -13,7 +13,7 @@ exec-once = dbus-update-activation-environment --all
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
 exec-once = hyprpm reload -n
 
-# Play login sound (merged from custom/execs.conf)
+# Play login sound (merged from custom/execs.conf)>
 exec-once = sleep 1 && ~/.config/hypr/hyprland/scripts/play_sound.sh desktop-login
 
 # Audio
