Refactor color configurations across multiple files for improved aesthetics and consistency

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(a28b8fAA)
-#     col.inactive_border = rgba(544245AA)
+#     col.active_border = rgba(86948dAA)
+#     col.inactive_border = rgba(3d4944AA)
 # }
 
 misc {
-    background_color = rgba(1d1013FF)
+    background_color = rgba(0a1611FF)
 }
 
 plugin {
@@ -17,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(1d1013FF)
-        col.text = rgba(f6dce0FF)
+        bar_color = rgba(0a1611FF)
+        col.text = rgba(d8e6deFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(f6dce0), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(f6dce0), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(f6dce0), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(d8e6de), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(d8e6de), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(d8e6de), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(ffb1c2AA) rgba(ffb1c277),pinned:1
+windowrulev2 = bordercolor rgba(00e0b2AA) rgba(00e0b277),pinned:1
