Add global shortcuts for dock and bar functionality in keybinds and shell configuration
- Introduce shortcuts to toggle the dock, pin/unpin the dock, and toggle bar auto-hide in keybinds.conf
- Implement corresponding global shortcut functionality in shell.qml for dock and bar management

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -45,6 +45,9 @@ bindd = Super, Slash, Toggle cheatsheet, global, quickshell:cheatsheetToggle # T
 bindd = Super, K, Toggle on-screen keyboard, global, quickshell:oskToggle # Toggle on-screen keyboard
 bind = Super, G, global, quickshell:overlayToggle # Toggle overlay
 bindd = Super, J, Toggle bar, global, quickshell:barToggle # Toggle bar
+bindd = Super+Shift, D, Toggle dock, global, quickshell:dockToggle # Toggle dock
+bindd = Super+Ctrl, D, Pin/unpin dock, global, quickshell:dockTogglePin # Pin/unpin dock
+bindd = Super+Ctrl, J, Toggle bar auto-hide, global, quickshell:barAutoHideToggle # Toggle bar auto-hide
 bindd = Ctrl+Alt, Delete, Toggle session menu, global, quickshell:sessionToggle # Toggle session menu
 bind = Ctrl+Alt, Delete, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill wlogout || wlogout -p layer-shell # [hidden] Session menu (fallback)
 bindd = Super, M, Toggle media controls, global, quickshell:mediaControlsToggle # Toggle media controls
