Refactor keybinds configuration and remove unused sidebar shortcut
- Update keybinds.conf to improve organization by categorizing sidebar and panel shortcuts
- Remove the detached sidebar toggle shortcut from SidebarLeft.qml as it is no longer needed

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -34,20 +34,24 @@ bindd = Super, V, Clipboard history >> clipboard, global, quickshell:overviewCli
 bindd = Super, Period, Emoji >> clipboard, global, quickshell:overviewEmojiToggle # Emoji >> clipboard
 
 ### Sidebars & Panels
-bind = Super, A, global, quickshell:sidebarLeftToggle # Toggle left sidebar
-bind = Super+Alt, A, global, quickshell:sidebarLeftToggleDetach # [hidden]
-bind = Super+Ctrl, A, global, quickshell:sidebarLeftTogglePin # Pin/unpin left sidebar
-bind = Super, B, global, quickshell:sidebarLeftToggle # [hidden]
-bind = Super, O, global, quickshell:sidebarLeftToggle # [hidden]
+### Left sidebar
+bindd = Super, A, Toggle left sidebar, global, quickshell:sidebarLeftToggle # Toggle left sidebar
+bindd = Super+Ctrl, A, Pin/unpin left sidebar, global, quickshell:sidebarLeftTogglePin # Pin/unpin left sidebar
+
+### Right sidebar
 bindd = Super, N, Toggle right sidebar, global, quickshell:sidebarRightToggle # Toggle right sidebar
 bindd = Super+Ctrl, N, Pin/unpin right sidebar, global, quickshell:sidebarRightTogglePin # Pin/unpin right sidebar
+
+### Bar / Dock
+bindd = Super, J, Toggle bar, global, quickshell:barToggle # Toggle bar
+bindd = Super+Ctrl, J, Toggle bar auto-hide, global, quickshell:barAutoHideToggle # Toggle bar auto-hide
+bindd = Super+Shift, D, Toggle dock, global, quickshell:dockToggle # Toggle dock
+bindd = Super+Ctrl, D, Pin/unpin dock, global, quickshell:dockTogglePin # Pin/unpin dock
+
+### Panels & helpers
 bindd = Super, Slash, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
 bindd = Super, K, Toggle on-screen keyboard, global, quickshell:oskToggle # Toggle on-screen keyboard
 bind = Super, G, global, quickshell:overlayToggle # Toggle overlay
-bindd = Super, J, Toggle bar, global, quickshell:barToggle # Toggle bar
-bindd = Super+Shift, D, Toggle dock, global, quickshell:dockToggle # Toggle dock
-bindd = Super+Ctrl, D, Pin/unpin dock, global, quickshell:dockTogglePin # Pin/unpin dock
-bindd = Super+Ctrl, J, Toggle bar auto-hide, global, quickshell:barAutoHideToggle # Toggle bar auto-hide
 bindd = Ctrl+Alt, Delete, Toggle session menu, global, quickshell:sessionToggle # Toggle session menu
 bind = Ctrl+Alt, Delete, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill wlogout || wlogout -p layer-shell # [hidden] Session menu (fallback)
 bindd = Super, M, Toggle media controls, global, quickshell:mediaControlsToggle # Toggle media controls
