Update toggle_wayvibes script to increase volume level for improved audio experience

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -243,8 +243,8 @@ animations {
     animation = workspaces, 1, 2, standardDecel, slidefadevert 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
-    animation = specialWorkspaceIn, 1, 1.5, emphasizedDecel, slidefadevert
-    animation = specialWorkspaceOut, 1, 1.5, emphasizedAccel, slidefadevert
+    animation = specialWorkspaceIn, 1, 1.5, emphasizedDecel, slidefadevert 70%
+    animation = specialWorkspaceOut, 1, 1.5, emphasizedAccel, slidefadevert 70%
 }
 
 input {
