--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -4,7 +4,8 @@
 # windowrulev2 = opacity 0.89 override 0.89 override, class:.*
 
 # App → workspace assignments
-windowrulev2 = workspace 1 silent, class:^(zen-browser|zen)$
+# windowrulev2 = workspace 1 silent, class:^(zen-browser|zen)$
+windowrulev2 = workspace 1 silent, class:^(floorp)$
 windowrulev2 = workspace 3 silent, class:^(cursor)$
 windowrulev2 = workspace 2 silent, class:^(code|Code|VSCodium)$
 windowrulev2 = workspace 4 silent, class:^(?i)tradingview.*$
