Refactor animation settings in general.conf to implement macOS-inspired bezier curves and window animations for smoother transitions and enhanced visual experience.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -192,59 +192,133 @@ decoration {
 
 animations {
     enabled = true
-    # Curves
-    bezier = expressiveFastSpatial, 0.42, 1.67, 0.21, 0.90
-    bezier = expressiveSlowSpatial, 0.39, 1.29, 0.35, 0.98
-    bezier = expressiveDefaultSpatial, 0.38, 1.21, 0.22, 1.00
-    bezier = emphasizedDecel, 0.05, 0.7, 0.1, 1
-    bezier = emphasizedAccel, 0.3, 0, 0.8, 0.15
-    bezier = standardDecel, 0, 0, 0, 1
-    bezier = menu_decel, 0.1, 1, 0, 1
-    bezier = menu_accel, 0.52, 0.03, 0.72, 0.08
-    # Custom bezier curves
-    bezier = easeOutQuart, 0.25, 1, 0.5, 1
-    bezier = easeInOutSine, 0.37, 0, 0.63, 1
-    bezier = modernBounce, 0.18, 0.99, 0, 1.15
-    bezier = easeInOutBack, 0.68, -0.55, 0.27, 1.55
-    bezier = neonPulse, 0.15, 0.85, 0.1, 1.0
+    
+    # ============================================================================
+    # MACOS-INSPIRED SMOOTH BEZIER CURVES
+    # ============================================================================
+    # These bezier curves replicate macOS's fluid, natural motion
+    
+    # Primary macOS curves - ultra-smooth deceleration
+    bezier = macEaseOut, 0.16, 1, 0.3, 1              # Main deceleration curve
+    bezier = macEaseIn, 0.7, 0, 0.84, 0               # Acceleration curve
+    bezier = macEaseInOut, 0.4, 0, 0.2, 1             # Balanced ease
+    
+    # Advanced macOS motion curves
+    bezier = macSpring, 0.32, 0.94, 0.6, 1.16         # Spring-like bounce
+    bezier = macSharp, 0.33, 0, 0.1, 1                # Sharp, precise movement
+    bezier = macSmooth, 0.25, 0.46, 0.45, 0.94        # Ultra-smooth flow
+    bezier = macOvershoot, 0.13, 0.99, 0.29, 1.09     # Subtle overshoot
+    bezier = macFluid, 0.23, 1, 0.32, 1               # Fluid, organic motion
+    
+    # Window-specific curves
+    bezier = macWindowOpen, 0.25, 0.1, 0.25, 1        # Window opening
+    bezier = macWindowClose, 0.3, 0, 0.8, 0.15        # Window closing
+    bezier = macWindowMove, 0.4, 0, 0.2, 1            # Window drag/move
+    
+    # Layer and UI curves
+    bezier = macUIFast, 0.2, 0, 0, 1                  # Fast UI elements
+    bezier = macUISmooth, 0.4, 0.0, 0.2, 1.0          # Smooth UI transitions
+    
+    # Special effect curves
+    bezier = macGenie, 0.25, 1.0, 0.25, 1.0           # Genie effect inspired
+    bezier = macScale, 0.36, 0, 0.66, -0.56           # Scale with slight bounce
+    
+    # ============================================================================
+    # OLD BEZIER CURVES (COMMENTED FOR ROLLBACK)
+    # ============================================================================
+    # bezier = expressiveFastSpatial, 0.42, 1.67, 0.21, 0.90
+    # bezier = expressiveSlowSpatial, 0.39, 1.29, 0.35, 0.98
+    # bezier = expressiveDefaultSpatial, 0.38, 1.21, 0.22, 1.00
+    # bezier = emphasizedDecel, 0.05, 0.7, 0.1, 1
+    # bezier = emphasizedAccel, 0.3, 0, 0.8, 0.15
+    # bezier = standardDecel, 0, 0, 0, 1
+    # bezier = menu_decel, 0.1, 1, 0, 1
+    # bezier = menu_accel, 0.52, 0.03, 0.72, 0.08
+    # bezier = easeOutQuart, 0.25, 1, 0.5, 1
+    # bezier = easeInOutSine, 0.37, 0, 0.63, 1
+    # bezier = modernBounce, 0.18, 0.99, 0, 1.15
+    # bezier = easeInOutBack, 0.68, -0.55, 0.27, 1.55
+    # bezier = neonPulse, 0.15, 0.85, 0.1, 1.0
 
-    # Border animations
+    # ============================================================================
+    # MACOS-STYLE WINDOW ANIMATIONS
+    # ============================================================================
+    # Smooth scale and fade for window opening/closing
+    animation = windowsIn, 1, 5, macWindowOpen, popin 87%
+    animation = windowsOut, 1, 4, macWindowClose, popin 87%
+    animation = windowsMove, 1, 4, macFluid, slide
+    animation = border, 1, 4, macUISmooth
+    animation = borderangle, 1, 100, macUISmooth, loop
+    
+    # ============================================================================
+    # OLD WINDOW ANIMATIONS (COMMENTED FOR ROLLBACK)
+    # ============================================================================
     # animation = border, 1, 1, neonPulse
     # animation = borderangle, 1, 30, neonPulse, loop
-    
-    # Window animations
     # animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
     # animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
     # animation = windowsMove, 1, 3, emphasizedDecel, slide
     # animation = border, 1, 10, emphasizedDecel
-    animation = windowsIn, 1, 2, standardDecel, slide
-    animation = windowsOut, 1, 2, standardDecel, slide
-    animation = windowsMove, 1, 3, easeInOutSine
+    # animation = windowsIn, 1, 2, standardDecel, slide
+    # animation = windowsOut, 1, 2, standardDecel, slide
+    # animation = windowsMove, 1, 3, easeInOutSine
 
-    # Layer animations
+    # ============================================================================
+    # MACOS-STYLE LAYER ANIMATIONS
+    # ============================================================================
+    # Smooth popups and overlays
+    animation = layersIn, 1, 4, macEaseOut, slide
+    animation = layersOut, 1, 3.5, macEaseIn, slide
+    animation = fadeLayersIn, 1, 3, macUISmooth
+    animation = fadeLayersOut, 1, 2.5, macUISmooth
+    
+    # ============================================================================
+    # OLD LAYER ANIMATIONS (COMMENTED FOR ROLLBACK)
+    # ============================================================================
     # animation = layersIn, 1, 2.7, emphasizedDecel, popin 93%
     # animation = layersOut, 1, 2.4, menu_accel, popin 94%
-    animation = layersIn, 1, 4, easeOutQuart, slide
-    animation = layersOut, 1, 3, easeOutQuart, fade
-    animation = fadeLayersIn, 1, 4, easeOutQuart
-    animation = fadeLayersOut, 1, 3, easeOutQuart
+    # animation = layersIn, 1, 4, easeOutQuart, slide
+    # animation = layersOut, 1, 3, easeOutQuart, fade
+    # animation = fadeLayersIn, 1, 4, easeOutQuart
+    # animation = fadeLayersOut, 1, 3, easeOutQuart
 
-    # Fade animations
+    # ============================================================================
+    # MACOS-STYLE FADE ANIMATIONS
+    # ============================================================================
+    # Buttery smooth fades
+    animation = fadeIn, 1, 4, macSmooth
+    animation = fadeOut, 1, 3, macSmooth
+    animation = fadeSwitch, 1, 4, macEaseInOut
+    animation = fadeShadow, 1, 4, macEaseOut
+    animation = fadeDim, 1, 4, macFluid
+    
+    # ============================================================================
+    # OLD FADE ANIMATIONS (COMMENTED FOR ROLLBACK)
+    # ============================================================================
     # animation = fadeLayersIn, 1, 0.5, menu_decel
     # animation = fadeLayersOut, 1, 2.7, menu_accel
-    animation = fadeIn, 1, 3, easeInOutSine
-    animation = fadeOut, 1, 3, easeInOutSine
-    animation = fadeSwitch, 1, 3, easeInOutSine
-    animation = fadeShadow, 1, 3, easeInOutSine
-    animation = fadeDim, 1, 3, easeInOutSine
-
+    # animation = fadeIn, 1, 3, easeInOutSine
+    # animation = fadeOut, 1, 3, easeInOutSine
+    # animation = fadeSwitch, 1, 3, easeInOutSine
+    # animation = fadeShadow, 1, 3, easeInOutSine
+    # animation = fadeDim, 1, 3, easeInOutSine
     
-    # Workspace animations
-    animation = workspaces, 1, 2, standardDecel, slidefadevert 70%
+    # ============================================================================
+    # MACOS-STYLE WORKSPACE ANIMATIONS
+    # ============================================================================
+    # Smooth workspace switching like Mission Control
+    animation = workspaces, 1, 5, macEaseInOut, slide
+    animation = specialWorkspaceIn, 1, 4, macOvershoot, slidevert
+    animation = specialWorkspaceOut, 1, 3, macSharp, slidevert
+    
+    # ============================================================================
+    # OLD WORKSPACE ANIMATIONS (COMMENTED FOR ROLLBACK)
+    # ============================================================================
+    # animation = workspaces, 1, 2, standardDecel, slidefadevert 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
-    animation = specialWorkspaceIn, 1, 1.5, emphasizedDecel, slidefadevert 70%
-    animation = specialWorkspaceOut, 1, 1.5, emphasizedAccel, slidefadevert 70%
+    # animation = specialWorkspaceIn, 1, 1.5, emphasizedDecel, slidefadevert 70%
+    # animation = specialWorkspaceOut, 1, 1.5, emphasizedAccel, slidefadevert 70%
 }
 
 input {
