Refactor gesture settings in general.conf to correct syntax and update 4-finger gesture for workspace navigation.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -8,16 +8,15 @@ monitor = HDMI-A-1, 1920x1080@75, 0x0, 1, bitdepth, 10, vrr, 2
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
 # monitor=HDMI-A-1,1920x1080@60,1920x0,1,mirror,eDP-1
 
-gesture = 3, swipe, move,
+gesture = 3, swipe, move
 gesture = 3, pinch, float
 
 # 4-finger horizontal: Hyprscrolling layout (move columns)
-gesture = 4, left, dispatcher, layoutmsg, move +col
-gesture = 4, right, dispatcher, layoutmsg, move -col
+# gesture = 4, left, dispatcher, layoutmsg, move +col
+# gesture = 4, right, dispatcher, layoutmsg, move -col
 
 # 4-finger vertical: workspaces
-gesture = 4, vertical, workspace
-
+gesture = 4, horizontal, workspace
 # 4-finger pinch: toggle fullscreen
 gesture = 4, pinch, fullscreen
 gestures {
