--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -24,8 +24,9 @@ bind = Super, mouse:276, global, quickshell:overviewToggleReleaseInterrupt # [hi
 bind = Super, mouse:277, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
 bind = Super, mouse_up,  global, quickshell:overviewToggleReleaseInterrupt # [hidden]
 bind = Super, mouse_down,global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # [hidden] Toggle overview/launcher (alt)
+# bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # [hidden] Toggle overview/launcher (alt)
 bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcome.qml # [hidden] Launch welcome app
+bind = Super, Tab, focuscurrentorlast # [hidden] Switch between 2 most recent apps
 
 ### Quick Actions (Clipboard / Emoji / Workspace HUD)
 bindit = ,Super_L, global, quickshell:workspaceNumber # [hidden]
