Update Pomodoro widget and configuration settings
- Updated PomodoroWidget.qml to change mouse event handling and improve user interaction.
- Enhanced PomodoroControls.qml with new properties for work, short break, and long break durations, along with sound settings.
- Modified Config.qml to include sound configuration options for the Pomodoro timer.
- Improved PomodoroService.qml to manage sound alerts and synchronize timer settings effectively.
- Adjusted monitors.conf timestamp for consistency.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -121,8 +121,8 @@ gestures {
 
 general {
     # layout = scrolling
-    # layout = dwindle
-    layout = master
+    layout = dwindle
+    # layout = master
 
     # FM‑7 : Packet Storm (electric cyan → hazard yellow)
     col.active_border   = rgba(00141aee) rgba(00ffddee) rgba(faff00ee) rgba(00141aee) 75deg
@@ -243,7 +243,7 @@ animations {
     # MACOS-STYLE WINDOW ANIMATIONS
     # ============================================================================
     # Smooth scale and fade for window opening/closing
-    animation = windowsIn, 1, 5, macWindowOpen, popin 87%
+    animation = windowsIn, 1, 4.5, macWindowOpen, popin 87%
     animation = windowsOut, 1, 4, macWindowClose, popin 87%
     animation = windowsMove, 1, 4, macFluid, slide
     animation = border, 1, 4, macUISmooth
@@ -306,7 +306,7 @@ animations {
     # MACOS-STYLE WORKSPACE ANIMATIONS
     # ============================================================================
     # Smooth workspace switching like Mission Control
-    animation = workspaces, 1, 5, macEaseInOut, slide
+    animation = workspaces, 1, 4, macEaseInOut, slide
     animation = specialWorkspaceIn, 1, 4, macOvershoot, slidevert
     animation = specialWorkspaceOut, 1, 3, macSharp, slidevert
     
