Add Vicinae integration and enhance battery popup visuals
- Included Vicinae server execution in execs.conf for improved functionality.
- Added keybinding for toggling Vicinae in keybinds.conf.
- Updated rules.conf to apply blur and ignore alpha settings for Vicinae.
- Refined BatteryPopup.qml to improve battery percentage handling and added a slim animated progress bar for better visual feedback.

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -27,6 +27,8 @@ bind = Super, mouse_down,global, quickshell:overviewToggleReleaseInterrupt # [hi
 # bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # [hidden] Toggle overview/launcher (alt)
 bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcome.qml # [hidden] Launch welcome app
 bind = Super, Tab, focuscurrentorlast # [hidden] Switch between 2 most recent apps
+bind = Super, Space, exec, vicinae toggle
+
 
 ### Quick Actions (Clipboard / Emoji / Workspace HUD)
 bindit = ,Super_L, global, quickshell:workspaceNumber # [hidden]
