--- a/config/hypr/hyprland/execs.conf
+++ b/config/hypr/hyprland/execs.conf
@@ -12,6 +12,7 @@ exec-once = hypridle
 exec-once = dbus-update-activation-environment --all
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
 exec-once = hyprpm reload -n
+exec-once = vicinae server
 
 # Play login sound (merged from custom/execs.conf)>
 exec-once = sleep 1 && ~/.config/hypr/hyprland/scripts/play_sound.sh desktop-login
