--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -188,3 +188,8 @@ layerrule = animation slide top, quickshell:wallpaperSelector
 
 # Launchers need to be FAST
 layerrule = noanim, gtk4-layer-shell
+
+# Vicinae
+layerrule = blur,vicinae
+layerrule = ignorealpha 0, vicinae
+layerrule = noanim, vicinae
