Update keybindings and .gitignore for improved functionality
- Changed keybinding for toggling Vicinae from Super+Space to Alt+Space in keybinds.conf.
- Added new keybinding for cycling performance profiles in keybinds.conf.
- Updated .gitignore to include the current profile configuration file.

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -27,7 +27,7 @@ bind = Super, mouse_down,global, quickshell:overviewToggleReleaseInterrupt # [hi
 # bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # [hidden] Toggle overview/launcher (alt)
 bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcome.qml # [hidden] Launch welcome app
 bind = Super, Tab, focuscurrentorlast # [hidden] Switch between 2 most recent apps
-bind = Super, Space, exec, vicinae toggle
+bind = Alt, Space, exec, vicinae toggle
 
 
 ### Quick Actions (Clipboard / Emoji / Workspace HUD)
@@ -70,6 +70,9 @@ bindld = Super+Shift,M, Toggle mute, exec, wpctl set-mute @DEFAULT_SINK@ toggle 
 bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
 bindl = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
 bindld = Super+Alt,M, Toggle mic, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
+
+### Performance Profiles
+bindd = Super+Alt, O, Cycle performance profiles, exec, ~/.config/hypr/hyprland/scripts/switch_performance_profile.sh cycle # Cycle: Performance → Balanced → Power-saver2
 
 ### Wallpaper / Appearance / Panels
 bindd = Ctrl+Super, T, Toggle wallpaper selector, global, quickshell:wallpaperSelectorToggle # Wallpaper selector
