Refactor scripts and update README for improved organization
- Removed the copy-configs.sh and link-dotfiles.sh scripts as they are no longer needed.
- Updated .gitignore to remove prompt.md and ensure proper configuration file management.
- Reorganized README to reflect the new scripts directory structure and usage instructions.

--- a/config/hypr/hyprland/execs.conf
+++ b/config/hypr/hyprland/execs.conf
@@ -3,6 +3,9 @@ exec-once = ~/.config/hypr/hyprland/scripts/start_geoclue_agent.sh
 exec-once = qs -c $qsConfig &
 exec-once = ~/.config/hypr/hyprland/scripts/__restore_video_wallpaper.sh
 
+# Power profile monitor - sync Hyprland config when power profile changes
+exec-once = ~/.config/hypr/hyprland/scripts/monitor_power_profile.sh &
+
 # Input method (merged from custom/execs.conf)
 exec-once = fcitx5
 
