--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -72,7 +72,7 @@ bindl = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidde
 bindld = Super+Alt,M, Toggle mic, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
 
 ### Performance Profiles
-bindd = Super+Alt, O, Cycle performance profiles, exec, ~/.config/hypr/hyprland/scripts/switch_performance_profile.sh cycle # Cycle: Performance → Balanced → Power-saver2
+bindd = Super+Alt, O, Cycle performance profiles, global, quickshell:powerProfileCycle # Cycle: Performance → Balanced → Power Saver
 
 ### Wallpaper / Appearance / Panels
 bindd = Ctrl+Super, T, Toggle wallpaper selector, global, quickshell:wallpaperSelectorToggle # Wallpaper selector
