Update configuration files for power management and dotfiles script
- Changed the night mode setting in illogical-impulse config from automatic to manual, allowing for user control.
- Simplified commands in PowerProfileHyprlandSync.qml to focus on reloading configurations instead of overriding specific settings, enhancing clarity and maintainability.
- Added a newline at the end of unlink-dotfiles.sh for better script formatting.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -290,7 +290,7 @@
             "enable": false
         },
         "night": {
-            "automatic": true,
+            "automatic": false,
             "colorTemperature": 3123,
             "from": "19:00",
             "to": "06:30"
