Enhance overview performance and configuration settings
- Updated night mode settings in illogical-impulse config to enable automatic mode and adjusted color temperature for improved user experience.
- Optimized response time in Overview.qml by reducing timer delay and enhancing animation duration and easing for smoother transitions.
- Implemented caching for workspace dimensions and filtered windows in OverviewWidget.qml to minimize recalculations and improve performance.
- Adjusted window preview capture logic in OverviewWindow.qml to only activate when the overview is open, conserving resources.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -290,8 +290,8 @@
             "enable": false
         },
         "night": {
-            "automatic": false,
-            "colorTemperature": 3123,
+            "automatic": true,
+            "colorTemperature": 3536,
             "from": "19:00",
             "to": "06:30"
         }
