Update Hyprland configuration for Wine performance optimizations
- Enabled various environment variables in env.conf to enhance performance for Wine applications, including font hinting, integer scaling, and caching for DXVK/VKD3D.
- Updated rules.conf to allow XWayland clients to animate like native Wayland applications by uncommenting the noanim rule.

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -94,7 +94,7 @@ windowrulev2 = immediate, xwayland:1
 windowrulev2 = noblur, xwayland:1
 windowrulev2 = noshadow, xwayland:1
 # Allow XWayland clients (e.g. Wine apps) to animate like native Wayland ones
-#windowrulev2 = noanim, xwayland:1
+windowrulev2 = noanim, xwayland:1
 
 # Specific rules for common Wine window classes (complementary to xwayland rules)
 # windowrulev2 = noblur, class:^(?i)wine.*
