Update configuration files to enhance visual effects and dock functionality
- Enabled blur effects in Hyprland's general configuration for improved aesthetics.
- Activated the dock feature in the illogical-impulse config to enhance user interface accessibility.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -159,9 +159,9 @@ decoration {
     rounding = 18
 
     blur {
-        enabled = false
-        xray = false
-        special = false
+        enabled = true
+        xray = true
+        special = true
         new_optimizations = true
         size = 6
         passes = 1
