--- a/config/hypr/hyprland/execs.conf
+++ b/config/hypr/hyprland/execs.conf
@@ -1,16 +1,18 @@
 # Bar, wallpaper
 exec-once = ~/.config/hypr/hyprland/scripts/start_geoclue_agent.sh
+
+# Core components (authentication, lock screen, notification daemon) - must be before Quickshell for D-Bus
+exec-once = gnome-keyring-daemon --start --components=secrets
+exec-once = hypridle
+exec-once = dbus-update-activation-environment --all
+exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
+
+# Quickshell - start after D-Bus is ready to avoid PolkitAgent registration delays
 exec-once = qs -c $qsConfig &
 exec-once = ~/.config/hypr/hyprland/scripts/__restore_video_wallpaper.sh
 
 # Input method (merged from custom/execs.conf)
 exec-once = fcitx5
-
-# Core components (authentication, lock screen, notification daemon)
-exec-once = gnome-keyring-daemon --start --components=secrets
-exec-once = hypridle
-exec-once = dbus-update-activation-environment --all
-exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
 exec-once = hyprpm reload -n
 exec-once = vicinae server
 
