Update weather configuration and UI components for enhanced functionality
- Changed weather city from Hanoi to Moscow in the configuration.
- Updated weather icon mapping to align with Open-Meteo's WMO codes for improved accuracy.
- Refined WeatherCard and WeatherPopup layouts for better visual consistency and user experience.
- Enhanced Weather service to include additional properties and improved data handling for better performance.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": 0.11,
-            "contentTransparency": 0.57,
+            "backgroundTransparency": null,
+            "contentTransparency": null,
             "enable": true
         },
         "wallpaperTheming": {
@@ -188,7 +188,7 @@
         "verbose": true,
         "vertical": false,
         "weather": {
-            "city": "Hanoi",
+            "city": "Moscow",
             "enable": true,
             "enableGPS": false,
             "fetchInterval": 10,
