Update weather configuration and UI components for enhanced functionality
- Changed the default weather city from Moscow to Hanoi in the configuration.
- Increased popup dimensions for better visibility in WeatherPopup.qml.
- Introduced a new property to limit the number of warnings displayed, improving user experience.
- Enhanced warning display logic to better handle global hazard heuristics in Weather.qml, ensuring accurate and timely alerts.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -188,7 +188,7 @@
         "verbose": true,
         "vertical": false,
         "weather": {
-            "city": "Moscow",
+            "city": "Hanoi",
             "enable": true,
             "enableGPS": false,
             "fetchInterval": 10,
