Update configuration files for improved settings and functionality
- Updated monitors.conf with the latest generated timestamp.
- Enabled automatic night mode in illogical-impulse config for enhanced user experience.
- Updated spicetify config to reflect the new version and compatibility adjustments.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -301,7 +301,7 @@
             "enable": false
         },
         "night": {
-            "automatic": false,
+            "automatic": true,
             "colorTemperature": 3536,
             "from": "19:00",
             "to": "06:30"
