--- a/config/spicetify/config-xpui.ini
+++ b/config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ experimental_features = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.77.358.g4339a634
-with    = 2.42.5
+version = 1.2.79.425.g1d0fcf61
+with    = 2.42.6
